@@ -1,3 +1,8 @@
+Sat Aug 26 17:36:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * docs/ACE-guidelines.html:
+          Updated some parts to mention svn instead of cvs
+
 Sat Aug 26 03:11:01 UTC 2006  Krishnakumar B  <kitty@spam.invalid.domain>
 
         * docs/svn/svn-prefs.reg:
